--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@ outputs/
 _packages.py
 __pycache__/
 src/__pycache__/
-src/utils/__pycache__/
+src/exporters/__pycache__/
+src/helpers/__pycache__/
+src/loaders/__pycache__/
+src/raw/__pycache__/
+src/hm_generation/__pycache__/
+src/tilemap/__pycache__/
 tests/__pycache__/
